syntax = "proto3";
package Protocol;


option csharp_namespace = "Protocol";


import "Enum.proto";


message PosInfo
{
	uint64 id = 1;
	float x = 2;
	float y = 3;
	float z = 4;
	float yaw = 5;
	EMoveState move_State = 6;
}

message ObjectInfo
{
	uint64 id = 1;
	int32 infoId = 2;
	EObjectType object_type = 3;
	EActorType actor_type = 4;
	PosInfo pos_info = 5;
}

message RoomInfo
{
	int32 num = 1; // 번호
	string name = 2; // 이름
	int32 pw = 3; // 비밀번호
	ERoomState room_state = 4; /// 상태
	int32 cur_count = 5; // 현재 인원
	int32 max_count = 6; // 최대 인원
}